test/functions/diten/paramFormalGenericDefaultMismatchError.chpl
proc foo(param r: integral = 2.718) { }

foo();
